--- a/react-shop/src/styles/admin/order-management.css
+++ b/react-shop/src/styles/admin/order-management.css
@@ -521,6 +521,7 @@
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 0.5px;
+  color:rgb(153, 81, 225);
 }
 
 .status-badge.pending {
